force-app/main/default/objects/sbaa__Approval__c/fields/AvgCustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>AvgCustomerDiscount__c</fullName>
    <formula>Quote__r.SBQQ__AverageCustomerDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>