force-app/main/default/objects/sbaa__Approval__c/fields/DestinationRepAccountName__c.field-meta.xml
<CustomField>
    <fullName>DestinationRepAccountName__c</fullName>
    <formula>Quote__r.Destination_Rep__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Rep Account Name</label>
    <type>Text</type>
</CustomField>