force-app/main/default/objects/sbaa__Approval__c/fields/Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_percent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount percent</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>