force-app/main/default/objects/sbaa__Approval__c/fields/EndUserAccountName__c.field-meta.xml
<CustomField>
    <fullName>EndUserAccountName__c</fullName>
    <formula>Quote__r.End_User__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Account Name</label>
    <type>Text</type>
</CustomField>