force-app/main/default/objects/sbaa__Approval__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <formula>Quote__r.Project_Classification__c</formula>
    <label>Project Classification</label>
    <type>Text</type>
</CustomField>