force-app/main/default/objects/sbaa__Approval__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <formula>Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>