force-app/main/default/objects/sbaa__Approval__c/fields/QuoteTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteTotalAmount__c</fullName>
    <formula>Quote__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>