force-app/main/default/objects/sbaa__Approval__c/listViews/Active_Approvals.listView-meta.xml
<ListView>
    <fullName>Active_Approvals</fullName>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__Status__c</columns>
    <columns>Quote__c</columns>
    <columns>NAME</columns>
    <columns>sbaa__ApprovalStep__c</columns>
    <columns>sbaa__AssignedTo__c</columns>
    <columns>sbaa__DelegatedApprover__c</columns>
    <columns>Discount_percent__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>sbaa__Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__Status__c</field>
        <operation>equals</operation>
        <value>Assigned,Requested</value>
    </filters>
    <label>Active Approvals</label>
</ListView>