force-app/main/default/objects/sbaa__Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sbaa__ApprovalChain__c</columns>
    <columns>sbaa__AssignedTo__c</columns>
    <columns>sbaa__AssignedToMe__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote__c</columns>
    <columns>sbaa__Rule__c</columns>
    <columns>sbaa__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>