force-app/main/default/objects/sbaa__Approval__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>sbaa__ApprovalChain__c</columns>
    <columns>sbaa__Approver__c</columns>
    <columns>sbaa__AssignedTo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote__c</columns>
    <columns>sbaa__Rule__c</columns>
    <columns>sbaa__Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>All - Requested</label>
</ListView>