force-app/main/default/objects/sbaa__Approval__c/listViews/My_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>My_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>sbaa__ApprovalChain__c</columns>
    <columns>sbaa__AssignedTo__c</columns>
    <columns>sbaa__AssignedToMe__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote__c</columns>
    <columns>sbaa__Rule__c</columns>
    <columns>sbaa__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sbaa__AssignedToMe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Approval Requests</label>
</ListView>